--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -3,9 +3,54 @@
 body {
   display: flex;
   flex-direction: column;
-  font-family: Arial;
+  font-family: "Orbitron", sans-serif;
   min-height: 100vh;
-  background-color: red;
+  background-image: url(../../images/mars--background.jpg);
+  background-size: cover;
+}
+
+/* .landing-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: space-between;
+} */
+
+.landing-container {
+  text-align: center;
+  padding: 40px;
+}
+
+.title {
+  font-size: 28px;
+  color: #fff;
+  margin-bottom: 30px;
+}
+
+.sub-title {
+  font-size: 18px;
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.button-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+}
+
+button {
+  padding: 10px 20px;
+  background-color: #ffa500;
+  font-family: "Orbitron", sans-serif;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
 }
 
 header {
