--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -1,12 +1,15 @@
 /* -------------------  MOBILE  --------------------- */
 
 body {
-  display: flex;
-  flex-direction: column;
+  /* display: flex;
+  flex-direction: column; */
   font-family: "Orbitron", sans-serif;
+  max-height: 100vh;
   min-height: 100vh;
   background-image: url(../../images/mars--background.jpg);
   background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* .landing-container {
@@ -17,6 +20,8 @@ body {
   justify-content: center;
   align-content: space-between;
 } */
+
+/* ------ LANDING PAGE ------- */
 
 .landing-container {
   text-align: center;
@@ -53,13 +58,86 @@ button {
   cursor: pointer;
 }
 
+/* --------Rover Page ------------ */
+
+/* Nav */
+
+nav {
+  /* background-color: #f0f0f0; Background color for the navigation bar */
+  max-width: 100%;
+}
+
+.nav-list {
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+.nav-list li {
+  flex-grow: 1;
+}
+
+li {
+  display: inline;
+}
+
+li a {
+  display: block;
+  padding: 5px 10px;
+  text-decoration: none;
+  color: #ffa500; /* Text color for the navigation links */
+}
+
+.home-button {
+  color: #ff0000;
+}
+
+li a:hover {
+  background-color: #ddd; /* Background color when hovering over a navigation link */
+}
+
+li a.active {
+  background-color: #aaa; /* Background color for the active navigation link */
+  color: #fff; /* Text color for the active navigation link */
+}
+
+.rover-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  overflow-y: auto;
+}
+
+.rover-name {
+  color: #ff0000;
+  margin-top: 20px;
+}
+
+.launch-date,
+.landing-date,
+.rover-name,
+.image-container {
+  margin-top: 30px;
+}
+
+.image-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
 header {
   /* header styles */
 }
 
 main {
   flex: 1;
-  padding: 20px;
+  padding: 10px;
 }
 
 footer {
