--- a/src/public/assets/stylesheets/index.css
+++ b/src/public/assets/stylesheets/index.css
@@ -10,6 +10,10 @@ body {
   background-attachment: fixed;
 }
 
+.hidden {
+  display: none;
+}
+
 /* ------ LANDING PAGE ------- */
 
 .landing-container {
@@ -29,7 +33,7 @@ body {
   margin-bottom: 20px;
 }
 
-.button-group {
+.rover-buttons {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -111,13 +115,14 @@ li a.active {
 .rover-name {
   color: #ff0000;
   margin-top: 20px;
+  font-size: 50px;
 }
 
 .launch-date,
 .landing-date,
 .rover-name,
 .image-container {
-  margin-top: 30px;
+  margin-top: 40px;
 }
 
 .image-container {
@@ -126,9 +131,9 @@ li a.active {
   gap: 20px;
 }
 
-.image-container image {
-  height: 350px;
+.grid-item {
   width: 100%;
+  height: auto;
 }
 
 header {
@@ -157,7 +162,7 @@ footer {
     align-items: center;
   }
 
-  .button-group {
+  .rover-buttons {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -165,8 +170,12 @@ footer {
     max-width: 80%;
   }
 
-  .button-group button {
+  .rover-buttons button {
     padding: 15px 40px;
+  }
+
+  .image-container {
+    margin-top: 50px;
   }
 
   .title {
@@ -197,7 +206,7 @@ footer {
 /* -------------------  DESKTOP  -------------------- */
 
 @media (min-width: 1224px) {
-  .button-group {
+  .rover-buttons {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -205,7 +214,7 @@ footer {
     max-width: 80%;
   }
 
-  .button-group button {
+  .rover-buttons button {
     padding: 15px 40px;
     font-size: 20px;
   }
@@ -222,6 +231,10 @@ footer {
     margin-bottom: 20px;
   }
 
+  .image-container {
+    margin-top: 60px;
+  }
+
   .image-grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
@@ -233,7 +246,7 @@ footer {
   }
 
   .rover-name {
-    font-size: 50px;
+    font-size: 70px;
   }
 
   h3 {
@@ -244,7 +257,7 @@ footer {
 /* -------------------  LARGE SCREENS  -------------- */
 
 @media (min-width: 1824px) {
-  .button-group button {
+  .rover-buttons button {
     padding: 35px 60px;
     font-size: 30px;
   }
@@ -270,8 +283,8 @@ footer {
   }
 
   .rover-name {
-    font-size: 60px;
-    font-weight: 900;
+    font-size: 80px;
+    margin-top: 70px;
   }
 
   h3 {
@@ -287,11 +300,15 @@ footer {
     overflow-y: auto;
   }
 
-  .image-grid {
-    margin-top: 20px;
+  .image-container {
+    margin-top: 70px;
   }
 
-  .loading {
+  /* .image-grid {
+    margin-top: 20px;
+  } */
+
+  #loading {
     font-size: 40px;
   }
 }
